switched to csv, airflow orchestration to gcs

--- a/airflow/.gitignore
+++ b/airflow/.gitignore
@@ -252,3 +252,6 @@ licenses/LICENSES-ui.txt
 
 # airflow-build-dockerfile and correconding ignore file
 airflow-build-dockerfile*
+
+config.yaml
+keys/
