--- a/dbt/chi_traffic_crash/dbt_project.yml
+++ b/dbt/chi_traffic_crash/dbt_project.yml
@@ -32,5 +32,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   chi_traffic_crash:
     # Config indicated by + and applies to all files under models/example/
-    example:
+    staging:
       +materialized: view
+      +schema: staging
