--- a/dbt/chi_traffic_crash/dbt_project.yml
+++ b/dbt/chi_traffic_crash/dbt_project.yml
@@ -35,3 +35,6 @@ models:
     staging:
       +materialized: view
       +schema: staging
+    refined:
+        +materialized: view
+        +schema: refined
