crash data dim and fact tables. incremental loads and full snapshot dimensions.

--- a/dbt/chi_traffic_crash/dbt_project.yml
+++ b/dbt/chi_traffic_crash/dbt_project.yml
@@ -36,5 +36,8 @@ models:
       +materialized: view
       +schema: staging
     refined:
-        +materialized: view
+        +materialized: incremental
         +schema: refined
+    mart:
+        +materialized: view
+        +schema: mart
