--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,4 +1,11 @@
-from apache/airflow:2.10.2
-copy requirements.txt /requirements.txt
-# run pip install --user --upgrade pip
-run pip install --no-cache-dir  -r /requirements.txt
+FROM apache/airflow:2.10.2
+
+COPY requirements.txt /requirements.txt
+
+RUN command pip install --no-cache-dir  -r /requirements.txt
+
+USER root
+
+RUN apt-get update && apt-get install -y jq
+
+USER airflow
