updated loading DAG for easier partition.

--- a/dbt/chi_traffic_crash/models/refined/refined.yml
+++ b/dbt/chi_traffic_crash/models/refined/refined.yml
@@ -39,4 +39,10 @@ models:
         tests:
           - not_null
   - name: refined_dim_location
+    columns:
+      - name: location_hkey
+        tests:
+          - unique
+          - not_null
   - name: refined_ward
+  - name: refined_dim_location_enriched
