created refined fact tables for people and vehicle

--- a/dbt/chi_traffic_crash/models/refined/refined.yml
+++ b/dbt/chi_traffic_crash/models/refined/refined.yml
@@ -65,3 +65,16 @@ models:
         tests:
           - unique
           - not_null
+  - name: refined_fact_people
+    columns:
+      - name: people_hkey
+        tests:
+          - unique
+          - not_null
+
+  - name: refined_fact_vehicle
+    columns:
+      - name: vehicle_hkey
+        tests:
+          - unique
+          - not_null
